[metadata]
name = hyperloop
version = 0.5
summary = 
description-file = README.txt
keywords = openmdao
home-page = 
download-url = 
author = 
author-email = 
maintainer = 
maintainer-email = 
license = 
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main 
                openmdao.lib
                pycycle
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.7
	<3.0
requires-externals = 
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]

